# litestar-brands

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile
backend/app/: __init__.py  main.py
backend/app/config/: cache.py  logging.py  openapi.py  rate_limit.py  remote_sqlalchemy.py  sentry.py  settings.py  sqlalchemy.py  stores.py
backend/app/db/models/: __init__.py  brand.py  remote_brand.py  status.py  test_brand.py
backend/app/features/brands/: dependencies.py  dtos.py  events.py  middleware.py  repositories.py  schemas.py  services.py
backend/app/features/brands/controllers/: brands.py
backend/app/lib/: exceptions.py  schema.py  ssh.py
backend/app/server/: guards.py  plugins.py  routes.py
demo/: input.py  multi_db.py  slice.py
frontend/: .env  .env.example  Dockerfile  package-lock.json  package.json  prod.Dockerfile  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
frontend/src/: app.d.ts  app.html  app.postcss  hooks.server.ts
frontend/src/lib/: app.css  constants.ts
frontend/src/lib/components/: Date.svelte  ExtraParams.svelte  Hosts.svelte  RefreshButton.svelte  Status.svelte
frontend/src/lib/interfaces/: brand.ts  status.ts
frontend/src/lib/types/: status.ts  version.ts
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/(brands)/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/[name]/: +page.svelte  +page.ts
frontend/src/routes/api/: +server.ts
frontend/src/routes/api/brands/: +server.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/logout/: +page.server.ts
skeleton/src/lib/types/: brand.ts
src/app/: main.py
(+8 files in other folders)
